# navier-2d

./: .gitignore  Cargo.toml  README.md
src/: display.rs  main.rs  numeric.rs  poission.rs  preprocessor.rs  sim.rs  solver.rs
src/observers/: imgstream.rs  mod.rs  webstream.rs
src/postprocessing/: display.rs  mod.rs
src/preprocessing/: cli.rs  image_input.rs  mod.rs  serial_mask.rs
src/sim/: mod.rs  navier.rs  numeric.rs  poission.rs  poisson.rs  sim.rs  task.rs
