[package]
name = "navier-2d"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.33.2"
piston_window = "0.132.0"
plotters = "0.3.7"
image = "0.25.6"
minifb = "0.28.0"
screen_size = "0.1.0"
argmin = "0.10.0"
nalgebra-sparse = "0.10.0"
indicatif = "0.17.11"
num-traits = "0.2.19"
argmin-math = "0.4.0"
